Fixed gap when showing the category list on palm view

--- a/app/assets/stylesheets/partials/modules/_section-nav.scss
+++ b/app/assets/stylesheets/partials/modules/_section-nav.scss
@@ -47,7 +47,8 @@ $section-nav-breakpoint: 1000 !default;
 	}
 
   /* TODO Modifier: temp fix for Deals version because it doesn't use the centre selector */
-  &.section-nav--deals .nav-contextual {margin-right: 0;}
+  &.section-nav--deals-index .nav-contextual,
+  &.section-nav--products-index-national .nav-contextual {margin-right: 0;}
 
 		/* Turn off `overflow: hidden` so we can see the drop down's at this breakpoint */
 		@include respond-min($section-nav-breakpoint) {
